--- a/crise.libraries.yml
+++ b/crise.libraries.yml
@@ -2,6 +2,7 @@ framework:
   css:
     theme:
       css/style.css: {}
+      css/custom.css: {}    
   js:
     bootstrap/assets/javascripts/bootstrap/affix.js: {}
     bootstrap/assets/javascripts/bootstrap/alert.js: {}
