Ajout des régions du footer du thème

--- a/crise.info.yml
+++ b/crise.info.yml
@@ -23,6 +23,13 @@ regions:
   footer: 'Footer'
   page_top: 'Page top'
   page_bottom: 'Page bottom'
+  before_footer: 'Before Footer'
+  footer_first: 'Footer First'
+  footer_second: 'Footer Second'
+  footer_third: 'Footer Third'
+  footer_four: 'Footer Four'
+  after_footer: 'After Footer'
+  copyright: 'Copyright'
 
 libraries-extend:
   bootstrap/framework:
