--- a/crise.info.yml
+++ b/crise.info.yml
@@ -13,7 +13,6 @@ regions:
   navigation: 'Navigation'
   navigation_collapsible: 'Navigation (Collapsible)'
   header: 'Top Bar'
-  highlighted: 'Highlighted'
   help: 'Help'
   content_top: 'Content top'
   content: 'Content'
@@ -21,14 +20,11 @@ regions:
   sidebar_first: 'Primary'
   sidebar_second: 'Secondary'
   footer: 'Footer'
-  page_top: 'Page top'
-  page_bottom: 'Page bottom'
+  page_bottom: 'Related Content'
   before_footer: 'Before Footer'
   footer_first: 'Footer First'
   footer_second: 'Footer Second'
   footer_third: 'Footer Third'
-  footer_four: 'Footer Four'
-  after_footer: 'After Footer'
   copyright: 'Copyright'
 
 libraries-extend:
