CSS: Ajouts multiples du thème acheté

--- a/crise.info.yml
+++ b/crise.info.yml
@@ -14,9 +14,9 @@ regions:
   navigation_collapsible: 'Navigation (Collapsible)'
   header: 'Top Bar'
   help: 'Help'
-  content_top: 'Content top'
+  #content_top: 'Content top'
   content: 'Content'
-  content_bottom: 'Content bottom'
+  #content_bottom: 'Content bottom'
   sidebar_first: 'Primary'
   sidebar_second: 'Secondary'
   page_bottom: 'Related Content'
