Ajouter une région pour les blocs Descriptions
 sous le champ Recherche, au-dessus du contenu

--- a/crise.info.yml
+++ b/crise.info.yml
@@ -13,6 +13,7 @@ regions:
   navigation: 'Navigation'
   navigation_collapsible: 'Navigation (Collapsible)'
   header: 'Top Bar'
+  topbar2: 'Top Bar 2'
   help: 'Help'
   #content_top: 'Content top'
   content: 'Content'
